[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algovoi-refund-receipt"
version = "0.1.1"
description = "AlgoVoi refund receipt format reference implementation -- companion to algovoi-substrate compliance receipt, post-settlement counterpart pinning urn:x402:canonicalisation:jcs-rfc8785-v1"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "AlgoVoi", email = "chopmob@gmail.com" },
]
keywords = [
  "x402", "ap2", "a2a", "mpp",
  "jcs", "rfc8785", "canonicalisation",
  "agentic-payments", "refund",
  "audit-chain", "consumer-rights", "psd2",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "algovoi-substrate>=0.3.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-cov>=4",
]

[project.urls]
Homepage = "https://api.algovoi.co.uk"
Documentation = "https://docs.algovoi.co.uk/refund-receipt"
Repository = "https://github.com/chopmob-cloud/algovoi-refund-receipt"
Issues = "https://github.com/chopmob-cloud/algovoi-refund-receipt/issues"
IETF-I-D = "https://datatracker.ietf.org/doc/draft-hopley-x402-refund-receipt/"

[tool.setuptools.packages.find]
where = ["."]
include = ["algovoi_refund_receipt*"]

[tool.setuptools.package-data]
algovoi_refund_receipt = ["py.typed"]
